Bug 111571 - writer crash when modeless dialog is left opened
Summary: writer crash when modeless dialog is left opened
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0 all versions
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0 target:5.4.1 target:5.3.6
Keywords: bibisected, bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2017-08-09 17:08 UTC by Pranav Kant
Modified: 2017-08-14 10:13 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pranav Kant 2017-08-09 17:08:10 UTC
Description:
Not able to open the writer application until one manually tweaks the registrymodifications.xcu file (remove the slot id corresponding to the dialog child window)

Steps to Reproduce:
1. Go to Insert -> Bibliographic Entry 
2. A modeless dialog will be opened
3. Close the writer application without closing the modeless dialog
4. Restart writer application => crash.

Actual Results:  
Shouldn't crash

Expected Results:
Crashes


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Pranav Kant 2017-08-09 17:20:44 UTC
In above comment, in step 1, I meant:

1. Go to Insert -> Table of Contents and Index -> Bibliographic Entry 

This bug is also present for:
 Insert -> Table of Contents and Index -> Index Entry
Comment 2 Xisco Faulí 2017-08-09 17:38:51 UTC
I can reproduce it in

Version: 6.0.0.0.alpha0+
Build ID: 0342c5e8086c8200ecadbe9d52dd4ef6a093effb
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in

Version: 6.0.0.0.alpha0+
Build ID: aa084cc1dcb518ffc1984e122abbf4401c4d0ce0
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-08-08_01:05:21
Locale: es-ES (es_ES); Calc: group

Linux only
Comment 3 Xisco Faulí 2017-08-09 18:15:36 UTC
I can reproduce it in

Version: 4.5.0.0.alpha0+
Build ID: 2851ce5afd0f37764cbbc2c2a9a63c7adc844311
Locale: ca_ES

but not in

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e
Comment 4 Aron Budea 2017-08-10 08:22:51 UTC
Strangely I couldn't reproduce it in bibisect repo bibisect-50max starting from a clean user profile. In fact, my bibisect in repo lo-linux-dbgutil-daily-till52 pointed to the following range:

2016-02-27: source-hash-af57a81d0c28944b424649f024c28f444a1ab2d9
https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=49f81b3f33e1b043a1615855503768d78db5f093..af57a81d0c28944b424649f024c28f444a1ab2d9

At this point there's still a recovery dialog upon second start. There's not even a recovery dialog anymore in:
2016-02-29: source-hash-2b24b6b6c3b18d7d934b3f76cc7a787c498ece4a
https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=5978b78eb2ee016bfda0a572ae1a9c86dc639241..2b24b6b6c3b18d7d934b3f76cc7a787c498ece4a
Comment 5 Commit Notification 2017-08-11 12:16:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=da3d4d2160ee71ebef9aa42ad4b9f2af9da2ed02

Resolves: tdf#111571 crash on restarting writer with modeless biblio dialog

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2017-08-11 12:20:08 UTC
backports in gerrit
Comment 7 Commit Notification 2017-08-11 16:15:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=87f31ec5a8fb968bde0ff1d1bd41324883b6e263&h=libreoffice-5-4

Resolves: tdf#111571 crash on restarting writer with modeless biblio dialog

It will be available in 5.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2017-08-11 18:27:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=21bf73a005f38fc4970ee916dce89ac05c60e729&h=libreoffice-5-3

Resolves: tdf#111571 crash on restarting writer with modeless biblio dialog

It will be available in 5.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2017-08-14 10:13:21 UTC
Cherry-picked the commit locally. Fixed verified