Resolves: tdf#111571 crash on restarting writer with modeless biblio dialog

Change-Id: I2663f84c28721f61c1ed7c8d92a228cafa8f1177
Reviewed-on: https://gerrit.libreoffice.org/41038
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Jenkins <ci@libreoffice.org>