sw/source/ui/index/swuiidxmrk.cxx
@@ -1636,8 +1636,8 @@ SwAuthMarkFloatDlg::SwAuthMarkFloatDlg(SfxBindings* _pBindings,
 {
     Initialize(pInfo);
     SwWrtShell* pWrtShell = ::GetActiveWrtShell();
-    OSL_ENSURE(pWrtShell, "No shell?");
-    m_aContent.ReInitDlg(*pWrtShell);
+    if (pWrtShell)
+        m_aContent.ReInitDlg(*pWrtShell);
 }
 
 void SwAuthMarkFloatDlg::Activate()
